# app/docs/swagger.yaml
@@ -979,6 +979,42 @@ paths:
       summary: レシピ手順登録
       tags:
       - recipeSteps
+  /recipes:
+    get:
+      description: レシピリストを取得する
+      parameters:
+      - description: type=chefFollowとすることでフォローしているシェフの情報を取得する
+        in: query
+        name: type
+        type: string
+      - description: 検索文字列（LIKE句で指定される）
+        in: query
+        name: q
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/controllers.H'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/domain.RecipesForGet'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/controllers.H'
+            - properties:
+                data:
+                  $ref: '#/definitions/usecase.ResultStatus'
+              type: object
+      summary: レシピリストの取得
+      tags:
+      - recipes
   /recipes/{id}:
     get:
       description: レシピ情報を取得する
